summative.moria.Moria.scala.error
Compilation error:
Moria:4: error: not found: value Direction
       setDirection(Direction.EAST);
                    ^Moria:8: error: not found: value pickUpBaggle
      pickUpBaggle();
      ^Moria:11: error: not found: value Direction
      setDirection(Direction.EAST);
                   ^Moria:15: error: not found: value Direction
      setDirection(Direction.WEST);
                   ^