summative.moria.Moria.scala.code
def run() {
  while (!finished()) {
		if (!isOverBaggle && !isCarryingBaggle) {
     	setDirection(Direction.EAST);
			forward();
    }
    else if (isOverBaggle && !isCarryingBaggle) {
      pickUpBaggle();
    }
    else if (isCarryingBaggle && !isOverBaggle) {
      setDirection(Direction.EAST);
			forward();
    }
    else {
      setDirection(Direction.WEST);
			forward();
      dropBaggle();
      
    }
  }
}

def finished(): Boolean = {
  var width:Int = getWorldWidth;
  var x:Int = getX;
  if (x == width -3) {
    return true
  }
  return false
}